# ai-ml-training

./: .gitignore  README.md  peepholing.ipynb  pyproject.toml  regression.ipynb  weather.csv  yeild_demo.py
DataReader/: dataset.py  main.py  pyproject.toml  reader.py  utils.py
